Hover on mobiles possible fix

--- a/src/styles/FourthPanel.scss
+++ b/src/styles/FourthPanel.scss
@@ -112,3 +112,19 @@
     }
   }
 }
+
+@media (hover: hover) and (pointer: fine) {
+  .FourthPanel {
+    .stackList {
+      img:hover {
+        transform: translate(-50%, -50%) scale(1.6);
+        filter: drop-shadow(0px 10px 9px $secondary-color);
+      }
+
+      img:hover + .iconName {
+        transform: translate(-50%, -50%) scale(1);
+        filter: drop-shadow(0px 10px 9px $secondary-color);
+      }
+    }
+  }
+}
